<?xml version="1.0" encoding="utf-8"?>

<!-- Use a relative layout so we can specify the relation of views in relation to each other -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <!-- Calculator Screen -->
    <TextView
        android:id="@+id/answer_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="40dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/ready_text"
        android:textSize="42sp"/>
    <!-- Group the buttons together in a nested layout -->
    <RelativeLayout
        android:id="@+id/button_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/answer_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp">

        <!-- TOP ROW -->
        <!-- for this button and all others, in order to better support all screen sizes, we
             shouldn't hard code the size of every button -->
        <Button
            android:id="@+id/button_7"
            android:layout_width="84dp"
            android:layout_height="84dp"
            android:text="@string/button_7"/>

        <Button
            android:id="@+id/button_8"
            android:layout_width="84dp"
            android:layout_height="84dp"
            android:layout_toRightOf="@id/button_7"
            android:text="@string/button_8"/>

        <Button
            android:id="@+id/button_9"
            android:layout_width="84dp"
            android:layout_height="84dp"
            android:layout_toRightOf="@id/button_8"
            android:text="@string/button_9"/>

        <Button
            android:id="@+id/button_div"
            android:layout_width="84dp"
            android:layout_height="84dp"
            android:layout_toRightOf="@id/button_9"
            android:text="@string/button_div"/>

        <!-- SECOND ROW -->

        <Button
            android:id="@+id/button_4"
            android:layout_width="84dp"
            android:layout_height="84dp"
            android:layout_below="@id/button_7"
            android:text="@string/button_4"/>

        <Button
            android:id="@+id/button_5"
            android:layout_width="84dp"
            android:layout_height="84dp"
            android:layout_below="@id/button_7"
            android:layout_toRightOf="@id/button_4"
            android:text="@string/button_5"/>

        <Button
            android:id="@+id/button_6"
            android:layout_width="84dp"
            android:layout_height="84dp"
            android:layout_below="@id/button_9"
            android:layout_toRightOf="@id/button_5"
            android:text="@string/button_6"/>

        <Button
            android:id="@+id/button_mul"
            android:layout_width="84dp"
            android:layout_height="84dp"
            android:layout_below="@id/button_div"
            android:layout_toRightOf="@id/button_6"
            android:text="@string/button_mul"/>

        <!-- THIRD ROW -->

        <Button
            android:id="@+id/button_1"
            android:layout_width="84dp"
            android:layout_height="84dp"
            android:layout_below="@id/button_4"
            android:text="@string/button_1"/>

        <Button
            android:id="@+id/button_2"
            android:layout_width="84dp"
            android:layout_height="84dp"
            android:layout_below="@id/button_5"
            android:layout_toRightOf="@id/button_1"
            android:text="@string/button_2"/>

        <Button
            android:id="@+id/button_3"
            android:layout_width="84dp"
            android:layout_height="84dp"
            android:layout_below="@id/button_6"
            android:layout_toRightOf="@id/button_2"
            android:text="@string/button_3"/>

        <Button
            android:id="@+id/button_sub"
            android:layout_width="84dp"
            android:layout_height="84dp"
            android:layout_below="@id/button_mul"
            android:layout_toRightOf="@id/button_3"
            android:text="@string/button_sub"/>

        <!-- LAST ROW -->

        <Button
            android:id="@+id/button_clear"
            android:layout_width="84dp"
            android:layout_height="84dp"
            android:layout_below="@id/button_1"
            android:text="@string/button_clear"/>

        <Button
            android:id="@+id/button_0"
            android:layout_width="84dp"
            android:layout_height="84dp"
            android:layout_below="@id/button_2"
            android:layout_toRightOf="@id/button_clear"
            android:text="@string/button_0"/>

        <Button
            android:id="@+id/button_equals"
            android:layout_width="84dp"
            android:layout_height="84dp"
            android:layout_below="@id/button_3"
            android:layout_toRightOf="@id/button_0"
            android:text="@string/button_equals"/>

        <Button
            android:id="@+id/button_add"
            android:layout_width="84dp"
            android:layout_height="84dp"
            android:layout_below="@id/button_sub"
            android:layout_toRightOf="@id/button_equals"
            android:text="@string/button_add"/>

    </RelativeLayout>

</RelativeLayout>
